--- a/_config.yml
+++ b/_config.yml
@@ -255,7 +255,7 @@ defaults:
       author_profile: false
       share: false
       comments: false
-  _publications
+  #_publications
   - scope:
       path: ""
       type: publications
@@ -273,7 +273,7 @@ defaults:
       author_profile: false
       share: false
       comment: false
-  _talks
+  #_talks
   - scope:
       path: ""
       type: talks
